--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -242,8 +242,8 @@
             <div class="row section-info-footer hidden-sm hidden-md hidden-lg">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-pad">
                     <div class="custom-checkbox">
-                        <input id="details_agree_desktop" name="package-check" value="" type="checkbox" v-model="detailsAccepted" v-bind:disabled="userRole == 'ROLE_CLIENT'">
-                        <label for="details_agree_desktop">I agree with these details</label>
+                        <input id="details_agree_mobile" name="details_agree_mobile" value="" type="checkbox" v-model="detailsAccepted" v-bind:disabled="userRole == 'ROLE_CLIENT'">
+                        <label for="details_agree_mobile">I agree with these details</label>
                     </div>
                 </div>
             </div>
