--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/fonts.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/fonts.css
@@ -11,6 +11,11 @@
     font-family: LatoRegular;
     src: url(../../fonts/Lato/Lato-Regular.ttf);
 }
+@font-face {
+    font-family: LatoRegular;
+    src: url(../../fonts/Lato/Lato-Italic.ttf);
+    font-style: italic;
+}
 
 /** --- LUCIDA GRANDE FONT --- **/
 @font-face {
