--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/icons.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/icons.css
@@ -41,3 +41,29 @@ i.icon.icon-question-mark {
 i.icon.icon-quotation-sent {
     background-image: url(/assets/images/success.png);
 }
+i.star-icon.unfilled {
+    background: url('/assets/images/star_unfilled_feedback.png') no-repeat;
+}
+i.star-icon.filled {
+    background: url('/assets/images/star_feedback.png') no-repeat;
+}
+.enq-icon.icon-date {
+    background: url("../../assets/images/date.png") no-repeat center;
+    background-size: cover;
+}
+.enq-icon.icon-timing {
+    background: url("../../assets/images/timing.png") no-repeat center;
+    background-size: cover;
+}
+.enq-icon.icon-location {
+    background: url("../../assets/images/location.png") no-repeat center;
+    background-size: cover;
+}
+.enq-icon.icon-event {
+    background: url("../../assets/images/event.png") no-repeat center;
+    background-size: cover;
+}
+.enq-icon.icon-client {
+    background: url("../../assets/images/client.png") no-repeat center;
+    background-size: cover;
+}
