--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/client-payments.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/client-payments.css
@@ -120,9 +120,19 @@
     color: rgba(131, 131, 131, 1);
     height: 24px;
 }
+.client-payments-block .control-list .control-item:nth-of-type(3) button:active {
+    color: rgba(255, 255, 255, 1);
+}
 .client-payments-block .act-info-block .act-item {
     margin: 0 0 7px 0;
 }
+
+.client-payments-block .order-package {
+    margin: 0 0 7px 0;
+}
+
+
+
 @media screen and (max-width: 1199px) {
     .client-payments-block .options-list {
         padding: 0;
@@ -156,7 +166,7 @@
         text-align: left;
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .client-payments-block {
         padding: 15px 0 37px 13px;
     }
@@ -181,11 +191,19 @@
         padding: 0;
     }
 }
-@media screen and (max-width: 441px) {
+@media screen and (max-width: 460px) {
     .client-payments-block .control-item button {
-        width: calc(100vw - 69vw);
+        /*width: calc(100vw - 69vw);*/
         font-size: 12px;
         padding: 0 5px;
+    }
+    .client-payments-block .control-list .control-item {
+        display: inline-block;
+        margin: 10px 2px 0 2px;
+    }
+
+    .client-payments-block .button-gradient.orange {
+        margin: 0;
     }
 }
 @media screen and (max-width: 320px) {
@@ -193,7 +211,7 @@
         padding: 8px 11px 10px 11px;
     }
     .client-payments-block {
-        padding: 15px 0 0 13px;
+        padding: 15px 11px 0 16px;
     }
     .client-payments-block .control-list .control-item {
         margin: 0 90px 12px 90px;
@@ -210,7 +228,8 @@
         float: left;
     }
     .client-payments-block .client-order-act-info.description {
-        margin: 0 0 17px 0;
+        margin: 0;
+        /*margin: 0 0 17px 0;*/
         clear: both;
     }
     .client-payments-block .client-order-act-info.time {
