--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/header.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/header.css
@@ -1,39 +1,31 @@
 .mbYTP_wrapper {
     position: absolute!important;
 }
-
 header {
     height: 409px;
     position: relative;
 }
-
 header.search {
     height: 368px;
 }
-
 header.home {
     height: 100vh;
     position: relative;
 }
-
 header.small {
     max-height: 54px;
 }
-
 header.small .navbar {
     background: #2228A3!important;
 }
-
 .navbar-brand>img {
-    width: 70px;
+    height: 36px;
+    width: 80px;
 }
-
 .home.header-background {
     background: url("../../assets/images/bg.jpg") no-repeat center;
-    /*background: transparent;*/
     background-size: cover;
 }
-
 .home.header-background .video {
     display: block;
     position: relative;
@@ -42,7 +34,6 @@ header.small .navbar {
     z-index: -100;
     overflow: hidden;
 }
-
 .home.header-background .video iframe {
     position: relative;
     left: 50%;
@@ -69,11 +60,9 @@ header.small .navbar {
 .home.header-background .header-block {
     max-width: 376px;
 }
-
 .search.header-background .header-block {
     max-width: 578px;
 }
-
 .home.header-background .background-panel {
     position: absolute;
     top:0;
@@ -82,17 +71,12 @@ header.small .navbar {
     right:0;
     background: rgba(68, 78, 232, 0.49);
 }
-
 .header-background .set-box{
     right: 5%;
     top: 15%;
     position: absolute;
 }
-
 .header-background .set-background{
-    /*position: absolute;*/
-    /*right: 0;*/
-    /*top: 0;*/
     float: right;;
     background: none;
     font-size: 16px;
@@ -105,7 +89,6 @@ header.small .navbar {
     height: 22px;
     text-align: center;
 }
-
 .header-background .set-background .ico{
     display: block;
     background: url("../../assets/images/change_photo.png") no-repeat;
@@ -113,7 +96,6 @@ header.small .navbar {
     height: 22px;
     background-size: cover;
 }
-
 .header-background .set-box .note{
     font-style: normal;
     font-size: 12px;
@@ -143,7 +125,6 @@ header.small .navbar {
     border-radius: 4px;
 }
 .header-background .set-box .set-background:hover + .note{opacity:1;}
-
 .header-block h2 {
     font-family: Ubuntu;
     font-weight: 600;
@@ -151,13 +132,11 @@ header.small .navbar {
     color: #fff;
     margin-bottom: 55px;
 }
-
 .search .header-block h2 {
     font-size: 30px;
     margin-bottom: 24px;
     margin-top: 26px;
 }
-
 .header-block input.search-input {
     line-height: 17px;
     text-align: center;
@@ -172,7 +151,6 @@ header.small .navbar {
     font-size: 15px;
     color: #3d4248;
 }
-
 .header-block .wrapper {
     width: calc(100% - 50px);
     display: inline-block;
@@ -182,10 +160,8 @@ header.small .navbar {
     background: white;
     overflow: hidden;
 }
-
 .header-block .wrapper input {
     float: left;
-    /*line-height: 29px;*/
     height: 31px;
     width: 35%;
     color: rgba(61, 66, 72, 0.53);
@@ -196,38 +172,31 @@ header.small .navbar {
     padding-left: 15px;
     padding-right: 8px;
 }
-
 .header-block .wrapper .select2-container--default .select2-selection--single {
     border-radius: 0;
     height: 32px;
     background-color: transparent;
 }
-
 .header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__rendered {
     line-height: 32px;
     color: rgba(61, 66, 72, 0.53);
     font-family: LatoRegular;
     font-size: 12px;
 }
-
 .header-block .wrapper .select2 {
     width: 161px!important;
     float: left;
     margin-right: 0px;
 }
-
 .header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__arrow {
     top: 3px;
 }
-
 .header-block .wrapper + .btn {
     margin-top: -2px;
 }
-
 .header-block .wrapper + .btn span {
     display: none;
 }
-
 .header-block .wrapper .divider {
     display: inline-block;
     width: 1px;
@@ -237,7 +206,6 @@ header.small .navbar {
     top: 4px;
     background: #BEC0C2;
 }
-
 .header-block .btn {
     font-size: 13px;
     margin-top: -5px;
@@ -255,12 +223,10 @@ header.small .navbar {
     transform: scaleX(-1);
     color: white;
 }
-
 .header-block .btn .fa {
     position: relative;
     top: -1px;
 }
-
 .header-background {
     position: absolute;
     top: 0;
@@ -278,7 +244,6 @@ header.small .navbar {
     background-color: rgba(0,0,0,.4);
     width: 100%;
 }
-
 .navbar {
     border-radius: 0;
     height: 54px;
@@ -287,99 +252,91 @@ header.small .navbar {
     z-index: 11;
     border: none;
 }
-
 .modal-open .navbar {
     background-color: rgb(34, 40, 163)!important;
 }
-
 .navbar>.container-fluid {
     position: relative;
-    top: 9px;
+    top: 6px;
     padding: 0;
 }
-
 .navbar>.container-fluid .navbar-brand {
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 18px;
-    padding-right: 17px;
+    padding-left: 33px;
+    padding-right: 39px;
     color: #fff;
     margin-left: 0;
     position: relative;
     height: 100%;
     display: block;
 }
-
 .navbar-default .navbar-nav>li>a {
     color: white;
 }
-
-
 .navbar-default .navbar-nav .message-lt{
     width: 25px;
     height: 18px;
     display: block;
     background: url("../../assets/images/messages.png") no-repeat;
 }
-
 .navbar-default .navbar-nav>li>a,
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus {
-    font-family: LatoRegular;
-    font-size: 14px;
     color: #fff;
-    outline: none!important;
+    outline: none;
 }
-
 .navbar-toggle,
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover {
     border: none;
     background: transparent;
 }
-
 .navbar-toggle .icon-bar {
     background-color: white!important;
 }
-
 .navbar-default .navbar-nav>li>a{
     padding: 0;
-    margin-top: 8px;
-    margin-right: 23px;
+    margin-top: 9px;
+    margin-right: 0;
+    font-family: LatoBold;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 1);
+    line-height: 24px;
 }
-
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>li:not('.mail')>a:hover {
     background: transparent;
     color: white;
 }
-
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover{
     background-color: transparent;
     color: white;
 }
-
 .navbar-default .navbar-nav>li>a:hover .underline {
     width: 100%;
 }
-
 .navbar-default .avatar{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    margin-right: 13px;
+    margin-right: 5px;
 }
-
 .navbar-default .navbar-right {
-    margin-right: 26px;
+    margin-right: 20px;
 }
-
 .navbar-default .navbar-right>li.profile .dropdown-menu{
-    right: -40%;
+    right: 0;
 }
-
+.nav.navbar-nav.navbar-right > li.mail {
+    margin: 4px 0 0 9px;
+}
+.nav.navbar-nav.navbar-right > li.profile-dropdown.dropdown {
+    margin: 0 0 0 17px;
+}
 .navbar-default .navbar-right>li.profile .dropdown-menu li,
 .navbar-default .navbar-right>li.profile-dropdown .dropdown-menu li,
 .navbar-header .profile-dropdown .dropdown-menu li{
@@ -405,7 +362,6 @@ header.small .navbar {
     margin-right: 4px;
     z-index: 2;
 }
-
 .navbar-header .orange_dashboard:after,
 .navbar-default .orange_dashboard:after{
     background: url('../../assets/images/dashboard.png') no-repeat;
@@ -426,14 +382,12 @@ header.small .navbar {
 .navbar-default .orange_settings:after{
     background: url('../../assets/images/settings.png') no-repeat;
 }
-
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:focus,
 .navbar-default .navbar-nav>.open>a:hover{
     color: white;
     background: transparent;
 }
-
 .navbar-default .navbar-right .mail>.badge {
     position: absolute;
     /*right: 18px;*/
@@ -448,17 +402,28 @@ header.small .navbar {
     border: 1px solid rgb(59,68,235);
     z-index: 1;
 }
-
-
+.navbar-header .profile-dropdown .dropdown-menu {
+    margin-top: 12px;
+}
+.navbar-nav>li>.dropdown-menu {
+    margin-top: 8px;
+}
 .navbar-header .profile-dropdown .dropdown-menu,
 .navbar-nav>li>.dropdown-menu {
-    margin-top: 10px;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
 }
-
 .navbar .navbar-header .profile-dropdown {
     display: none;
+}
+.nav.navbar-nav .caret {
+    margin: 0 0 0 4px;
+    border-top: 6px dashed;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+}
+.nav.navbar-nav.navbar-right > li {
+    margin: 0 9px;
 }
 
 @media (max-width: 1200px) {
@@ -603,16 +568,12 @@ header.small .navbar {
         color: grey!important;
         border: none;
     }
-
     .navbar>.container-fluid .navbar-brand {
         padding: 3px 23px 4px;
     }
-
-    .navbar-brand>img {
+    .navbar-brand > img {
         display: block;
-        width: 64px;
     }
-
     .navbar-default .navbar-nav li a:focus {
         color: grey!important;
         font-size: 11px;
