--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/search.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/search.css
@@ -1,4 +1,4 @@
-.block h2 {
+.search .block h2 {
     font-family: Ubuntu;
     font-weight: 600;
     font-size: 21px;
@@ -9,16 +9,16 @@
     margin-bottom: 11px;
 }
 
-.custom-checkbox {
+.search .custom-checkbox {
     display: inline-block;
     margin-bottom: 15px;
 }
 
-.custom-checkbox input {
+.search .custom-checkbox input {
     display: none;
 }
 
-.custom-checkbox label {
+.search .custom-checkbox label {
     padding-left: 23px;
     position: relative;
     font-family: LatoRegular;
@@ -28,7 +28,7 @@
     vertical-align: middle;
 }
 
-.custom-checkbox label:before {
+.search .custom-checkbox label:before {
     content: "";
     position: absolute;
     left: 0;
@@ -53,22 +53,22 @@
     /*background: url("../../assets/images/yes.png") no-repeat center;*/
 /*}*/
 
-.custom-checkbox input:checked + label:after {
+.search .custom-checkbox input:checked + label:after {
     content: "";
     display: block;
 }
 
-.categories {
+.search .categories {
     columns: 5;
     -webkit-columns: 5;
     -moz-columns: 5;
 }
 
-.radio-block {
+.search .radio-block {
     margin-right: 38px;
 }
 
-.details-btn {
+.search .details-btn {
     position: relative;
     top: 8px;
     font-family: LatoRegular;
@@ -79,11 +79,11 @@
     text-decoration: underline;
 }
 
-.details-btn:hover {
+.search .details-btn:hover {
     color: #dc6738;
 }
 
-.select2  {
+.search .select2  {
     width: 135px!important;
     outline: none;
     margin-right: 14px;
@@ -97,60 +97,60 @@
     background-color: #F1F1F1;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__rendered {
+.search .select2-container--default .select2-selection--single .select2-selection__rendered {
     padding: 0 11px;
     line-height: 24px;
     text-align: left;
     font-size: 13px;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
+.search .select2-container--default .select2-selection--single .select2-selection__arrow {
     top: 0;
     right: 6px;
 }
 
-.select2-container--open .select2-dropdown--below {
+.search .select2-container--open .select2-dropdown--below {
     border: none;
     background: transparent;
 }
 
-.select2-container--default .select2-results__option {
+.search .select2-container--default .select2-results__option {
     background: #F1F1F1;
     padding: 5px 11px;
     border-bottom: 1px solid #E8E8E8;
 }
 
-.select2-container--default .select2-results__option--highlighted[aria-selected] {
+.search .select2-container--default .select2-results__option--highlighted[aria-selected] {
     background-color: #F1F1F1;
     color: #828387;
 }
 
-.select2-container--default .select2-results__option[aria-selected=true] {
+.search .select2-container--default .select2-results__option[aria-selected=true] {
     background-color: #F1F1F1;
     color: #828387;
 }
 
-.select2-container--default .select2-results__option:last-of-type {
+.search .select2-container--default .select2-results__option:last-of-type {
     border-bottom-left-radius: 11px;
     border-bottom-right-radius: 11px;
     border: none;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
+.search .select2-container--default .select2-selection--single .select2-selection__arrow b {
     border-color: #FF9758 transparent transparent transparent;
     border-width: 5px 5px 0 5px;
 }
 
-.select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
+.search .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
     border-color: transparent transparent #FF9758 transparent;
     border-width: 0 5px 5px 5px;;
 }
 
-.selections-white .select2-results__option {
+.search .selections-white .select2-results__option {
     background: white!important;
 }
 
-.results-header h1 {
+.search .results-header h1 {
     font-family: Ubuntu;
     font-weight: 500;
     font-size: 21px;
@@ -160,7 +160,7 @@
     margin-bottom: 24px;
 }
 
-.results-header .results-menu>li {
+.search .results-header .results-menu>li {
     position: relative;
     display: inline-block;
     padding: 4px 23px;
@@ -172,19 +172,19 @@
     vertical-align: bottom;
 }
 
-.results-header .results-menu>li:hover,
-.results-header .results-menu>li.active {
+.search .results-header .results-menu>li:hover,
+.search .results-header .results-menu>li.active {
     background: #3D404C;
 }
 
-.results-header .results-menu>li:hover>a,
-.results-header .results-menu>li.active>a,
-.results-header .results-menu>li:hover>a:hover,
-.results-header .results-menu>li.active>a:hover{
+.search .results-header .results-menu>li:hover>a,
+.search .results-header .results-menu>li.active>a,
+.search .results-header .results-menu>li:hover>a:hover,
+.search .results-header .results-menu>li.active>a:hover{
     color: white;
 }
 
-.results-header .results-menu>li>a {
+.search .results-header .results-menu>li>a {
     font-family: LatoRegular;
     font-size: 14px;
     color: #424242;
@@ -192,16 +192,16 @@
     text-decoration: none;
 }
 
-.results-header .results-menu>li>a:hover {
+.search .results-header .results-menu>li>a:hover {
     color: #5c5c5c;
 }
 
 
-.results-header .results-menu>li:not(:first-of-type) {
+.search .results-header .results-menu>li:not(:first-of-type) {
     margin-left: -11px;
 }
 
-.results-header .results-menu li.recommendations {
+.search .results-header .results-menu li.recommendations {
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     position: relative;
@@ -211,11 +211,11 @@
     z-index: 2;
     padding: 8px 11px 4px;
 }
-.results-header .results-menu li.recommendations:hover,
-.results-header .results-menu li.recommendations.active {
+.search .results-header .results-menu li.recommendations:hover,
+.search .results-header .results-menu li.recommendations.active {
     background: #FF9C5C;
 }
-.results-header .results-menu li.recommendations>a {
+.search .results-header .results-menu li.recommendations>a {
     font-size: 14px;
     font-family: LatoBold;
     color: #424242;
@@ -223,63 +223,63 @@
     text-decoration: none;
 }
 
-.results-header .results-menu li.recommendations:hover>a,
-.results-header .results-menu li.recommendations.active>a {
+.search .results-header .results-menu li.recommendations:hover>a,
+.search .results-header .results-menu li.recommendations.active>a {
     color: white;
 }
 
-.results-content {
+.search .results-content {
     background: #3D404C;
 }
 
-.results-content .filters {
+.search .results-content .filters {
     display: inline-block;
     width: 100%;
     margin-top: 15px;
     text-align: right;
 }
 
-.results-content .slider-block .bx-wrapper .bx-controls-direction a {
+.search .results-content .slider-block .bx-wrapper .bx-controls-direction a {
     text-indent: 0;
     font-size: 19px;
     color: white;
     text-decoration: none;
 }
 
-.results-content .slider-block .bx-wrapper .bx-controls-direction a.bx-prev {
+.search .results-content .slider-block .bx-wrapper .bx-controls-direction a.bx-prev {
     left: 0;
 }
 
-.results-content .slider-block .bx-wrapper .bx-controls-direction a.bx-next {
+.search .results-content .slider-block .bx-wrapper .bx-controls-direction a.bx-next {
     right: 0;
     text-align: right;
 }
 
-.results-content .slider-block .bx-wrapper {
+.search .results-content .slider-block .bx-wrapper {
     width: 100%;
     max-width: none!important;
     padding: 0 30px;
 }
 
-.results-content .slider-block .bx-wrapper .bx-viewport{
+.search .results-content .slider-block .bx-wrapper .bx-viewport{
     box-shadow: none;
     border: none;
     background: transparent;
     left: 0;
 }
 
-.results-content .filters .custom-checkbox label {
+.search .results-content .filters .custom-checkbox label {
     font-family: LatoRegular;
     font-size: 12px;
     color: white;
 }
 
-.results-content .filters .custom-checkbox label:before {
+.search .results-content .filters .custom-checkbox label:before {
     background: white;
     border: none;
 }
 
-.results-content .slider .title {
+.search .results-content .slider .title {
     font-family: Ubuntu;
     font-weight: 500;
     font-size: 15px;
@@ -291,7 +291,7 @@
     margin-top: 32px;
 }
 
-.profile-card {
+.search .profile-card {
     position: relative;
     width: 156px;
     display: inline-block;
@@ -303,27 +303,23 @@
     float: left;
     height: 285px;
 }
-
-.profile-card.bordered {
+.search .profile-card.bordered {
     border: 2px solid #ff9b5c;
     margin: 0px;
 }
-
-.profile-card .header {
+.search .profile-card .header {
     height: 115px;
     width: 100%;
     background-size: cover;
 }
-
-.profile-card .card-title {
+.search .profile-card .card-title {
     text-align: center;
     font-family: Ubuntu;
     font-weight: 600;
     margin-bottom: 2px;
     margin-top: 4px;
 }
-
-.profile-card .user-rating {
+.search .profile-card .user-rating {
     display: block;
     float: left;
     position: relative;
@@ -334,13 +330,11 @@
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
 }
-
-.profile-card .user-rating .stars {
+.search .profile-card .user-rating .stars {
     line-height: 13px;
     display: inline-block;
 }
-
-.profile-card .user-rating .stars>.star {
+.search .profile-card .user-rating .stars>.star {
     width: 8px;
     height: 8px;
     display: inline-block;
@@ -348,8 +342,7 @@
     background: url("../../assets/images/star_unfilled_rate.png") no-repeat;
     background-size: cover;
 }
-
-.profile-card .user-rating .stars>.star>.fill-star {
+.search .profile-card .user-rating .stars>.star>.fill-star {
     display: inline-block;
     width: 0;
     height: 100%;
@@ -358,8 +351,7 @@
     position: relative;
     top: -4px;
 }
-
-.profile-card .user-rating .rating {
+.search .profile-card .user-rating .rating {
     display: inline-block;
     font-size: 9px;
     font-family: LatoRegular;
@@ -367,8 +359,7 @@
     top: -4px;
     position: relative;
 }
-
-.profile-card .location {
+.search .profile-card .location {
     position: relative;
     display: inline-block;
     width: 100%;
@@ -379,8 +370,7 @@
     text-align: center;
     top: -5px;
 }
-
-.profile-card .talents {
+.search .profile-card .talents {
     margin-top: 5px;
     position: relative;
     display: inline-block;
@@ -394,8 +384,7 @@
     padding-bottom: 8px;
     border-bottom: 2px solid #e1e1e1;
 }
-
-.profile-card .video-icon {
+.search .profile-card .video-icon {
     right: 5px;
     top: 8px;
     position: absolute;
@@ -405,8 +394,7 @@
     background: url("../../assets/images/video_icon.png") no-repeat center;
     cursor: pointer;
 }
-
-.profile-card .controls {
+.search .profile-card .controls {
     padding: 0;
     margin: 0;
     height: auto;
@@ -414,8 +402,7 @@
     float: left;
     bottom: 0;
 }
-
-.profile-card .controls>.button-gradient {
+.search .profile-card .controls>.button-gradient {
     margin: 0;
     margin-bottom: 8px;
     position: relative;
@@ -428,18 +415,15 @@
     padding: 2px;
     max-height: 22px;
 }
-
-.profile-card .controls>.button-gradient.filled>.btn {
+.search .profile-card .controls>.button-gradient.filled>.btn {
     height: 25px;
     width: 112px;
     padding: 0px 6px;
     font-family: LatoRegular;
     font-size: 10px;
     color: #fff;
-
 }
-
-.profile-card .controls>.button-gradient>.btn {
+.search .profile-card .controls>.button-gradient>.btn {
     height: 18px;
     width: 110px;
     padding: 0px 6px;
@@ -449,14 +433,12 @@
     position: relative;
     top: -2px;
 }
-
-.tab-content .controls {
+.search .tab-content .controls {
     padding: 0;
     width: 100%;
     display: block;
 }
-
-.tab-content .controls>.button-gradient {
+.search .tab-content .controls>.button-gradient {
     position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -465,18 +447,15 @@
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
 }
-
-.tab-content .show-more.controls>.button-gradient>.btn {
+.search .tab-content .show-more.controls>.button-gradient>.btn {
     background: #3D404C;
     color: white;
 }
-
-.tab-content .show-more.controls>.button-gradient>.btn:active {
+.search .tab-content .show-more.controls>.button-gradient>.btn:active {
     background: rgba(255, 255, 255, 0);
     color: white;
 }
-
-.categories-block {
+.search .categories-block {
     overflow: hidden;
     height: 0;
     max-height: 0;
@@ -488,7 +467,7 @@
     transform: translate3d(0, 0, 0);
 }
 
-.categories-block.open {
+.search .categories-block.open {
     height: 100%;
     max-height: 1500px;
     transition-duration: 0s;
@@ -499,132 +478,113 @@
     transform: translate3d(0, 0, 0);
 }
 
-.results-content .filters .select2 {
+.search .results-content .filters .select2 {
     margin-bottom: 8px;
 }
 
 @media (max-width: 767px) {
-    .block h2 {
+    .search .block h2 {
         border: none;
         font-size: 14px;
         text-align: center;
         margin-bottom: 0;
         padding-bottom: 0;
     }
-
-    .block .select2 {
+    .search .block .select2 {
         width: 180px!important;
         margin-top: 10px;
         margin-left: calc((100% - 180px)/2);
         margin-right: calc((100% - 180px)/2);
     }
-
-    .categories {
+    .search .categories {
         columns: 2;
         -webkit-columns: 2;
         -moz-columns: 2;
     }
-
-    .radio-block {
+    .search .radio-block {
         margin-right: 8px;
     }
-
-    .categories-menu {
+    .search .categories-menu {
         display: none;
         justify-content: inherit;
     }
-
-    .categories-menu li.menu-block {
+    .search .categories-menu li.menu-block {
         width: 100%;
         line-height: 30px;
         padding: 0 20px;
         border-bottom: 2px solid #F2F2F2;
         text-align: center;
     }
-
-    .categories-menu li a:after {
+    .search .categories-menu li a:after {
         display: none;
     }
-
-    .categories-block {
+    .search .categories-block {
         transition-duration: 0.4s;
     }
-
-    .categories-block.open {
+    .search .categories-block.open {
         transition-duration: 0.6s;
     }
-
-    .location {
+    .search .location {
         padding: 0 11px;
         text-align: center;
     }
-
-    .details-wrap {
+    .search .details-wrap {
         text-align: center;
     }
-
-    .details-btn {
+    .search .details-btn {
         top: 0;
         font-size: 10px;
     }
-    .results-header h1 {
+    .search .results-header h1 {
         font-size: 15px;
     }
-    .results-header .results-menu>li {
+    .search .results-header .results-menu>li {
         padding: 0 19px;
     }
-    .results-header .results-menu>li>a {
+    .search .results-header .results-menu>li>a {
         font-size: 11px;
     }
-    .results-header .results-menu li.recommendations {
+    .search .results-header .results-menu li.recommendations {
         border-top-left-radius: 0;
         border-top-right-radius: 11px;
         padding: 2px 11px 2px;
         border-left: none;
     }
-    .results-header .results-menu li.recommendations>a {
+    .search .results-header .results-menu li.recommendations>a {
         font-size: 11px;
     }
-
-    .results-content .filters {
+    .search .results-content .filters {
         text-align: center;
     }
-
-    .results-content .filters .select2 {
+    .search .results-content .filters .select2 {
         width: 180px!important;
         margin-right: 0;
         margin-left: calc((100% - 180px)/2);
         margin-right: calc((100% - 180px)/2);
     }
-
-    .profile-card.mobile-horizontal {
+    .search .profile-card.mobile-horizontal {
         width: 206px;
         height: 72px;
         margin-bottom: 8px;
     }
-
-    .profile-card.mobile-horizontal .video-icon {
+    .search .profile-card.mobile-horizontal .video-icon {
         display: none;
     }
-
-    .profile-card.mobile-horizontal .header {
+    .search .profile-card.mobile-horizontal .header {
         height: 100%;
         width: 99px;
         float: left;
     }
-
-    .profile-card.mobile-horizontal .card-title {
+    .search .profile-card.mobile-horizontal .card-title {
         float: right;
         width: calc(100% - 99px);
         font-size: 9px;
     }
-
-    .profile-card.mobile-horizontal .location,
-    .profile-card.mobile-horizontal .talents {
+    .search .profile-card.mobile-horizontal .location,
+    .search .profile-card.mobile-horizontal .talents {
         display: none;
     }
-
-    .profile-card.mobile-horizontal .user-rating {
+    .search .profile-card.mobile-horizontal .user-rating {
         float: right;
         width: calc(100% - 99px);
         left: 0;
@@ -635,61 +595,52 @@
         transform: none;
         text-align: center;
     }
-
-    .profile-card.mobile-horizontal .user-rating .rating {
+    .search .profile-card.mobile-horizontal .user-rating .rating {
         vertical-align: top;
         font-size: 7px;
         top: -14px;
         position: relative;
     }
-
-    .profile-card.mobile-horizontal .user-rating .stars {
+    .search .profile-card.mobile-horizontal .user-rating .stars {
         line-height: 8px;
         top: -10px;
         position: relative;
         display: inline-block;
     }
-
-    .profile-card.mobile-horizontal .user-rating .stars>.star {
+    .search .profile-card.mobile-horizontal .user-rating .stars>.star {
         width: 6px;
         height: 6px;
     }
-
-    .profile-card.mobile-horizontal .user-rating .stars>.star .fill-star {
+    .search .profile-card.mobile-horizontal .user-rating .stars>.star .fill-star {
         top: 0;
         float: left;
     }
-
-    .profile-card.mobile-horizontal .controls {
+    .search .profile-card.mobile-horizontal .controls {
         width: calc(100% - 130px);
         display: inline-block;
         height: 36px;
         text-align: center;
         padding-left: 25px;
     }
-
-    .profile-card.mobile-horizontal .controls>.button-gradient {
+    .search .profile-card.mobile-horizontal .controls>.button-gradient {
         margin-bottom: 6px;
         height: 14px;
     }
-
-    .profile-card.mobile-horizontal .controls>.button-gradient .btn {
+    .search .profile-card.mobile-horizontal .controls>.button-gradient .btn {
         position: relative;
         height: 10px;
         margin-top: -8px;
         font-size: 6px;
         width: 80px;
     }
-
-    .profile-card.mobile-horizontal .controls>.button-gradient.filled .btn {
+    .search .profile-card.mobile-horizontal .controls>.button-gradient.filled .btn {
         height: 14px;
         margin-top: -5px;
         width: 80px;
     }
 }
-
 @media (max-width: 992px) and (min-width: 500px) {
-    .categories {
+    .search .categories {
         columns: 3;
         -webkit-columns: 3;
         -moz-columns: 3;
