--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -64,9 +64,9 @@ main {
     margin: 0;
 }
 
-.container {
-    padding: 0;
-}
+/*.container {*/
+    /*padding: 0;*/
+/*}*/
 
 .modal {
     padding-right: 0!important;
@@ -394,16 +394,13 @@ section.used-by {
     width: 100%;
     height: 100%;
 }
-
 .scroll-icon .icon-desktop {
     background: url("../assets/images/scroll_down.png") center no-repeat;
     background-size: cover;
 }
-
 .scroll-icon .icon-mobile {
     background: url("../assets/images/arrow_down.png") center no-repeat;
 }
-
 .divider-vertical {
     position: relative;
     float: left;
@@ -411,28 +408,24 @@ section.used-by {
     border-right: 2px solid rgba(24, 28, 127, 0.14);
     margin-right: 18px;
 }
-
 .underline {
     width: 0;
     transition-property: width;
     transition-duration: 0.3s;
     margin: 0 auto;
 }
-
 .active a .underline{
     display: block;
     width: 100%;
     height: 5px;
     margin: 0 auto;
 }
-
 .underline .top {
     width: 100%;
     height: 2px;
     border-radius: 2px;
     background-color: #ff5843;
 }
-
 .underline .bottom {
     width: 80%;
     margin: 2px auto 0 auto;
@@ -441,11 +434,9 @@ section.used-by {
     border-radius: 2px;
     background-color: #ff5843;
 }
-
-.profile-dropdown a.dropdown-toggle {
-    margin-top: 5px!important;
+.navbar-default .navbar-nav > li.profile-dropdown > a.dropdown-toggle {
+    margin-top: 5px ;
 }
-
 .profile-info {
     height: 212px;
     margin-top: -109px;
@@ -453,7 +444,6 @@ section.used-by {
     z-index: 2;
     overflow: hidden;
 }
-
 .profile-info .controls .button-gradient.filled .btn,
 .profile-info .controls .button-gradient .btn{
     min-width: 137px;
@@ -2434,32 +2424,19 @@ input[disabled] {
 
         background: #FFF;
 
-        background-image:
-                linear-gradient(45deg, transparent 50%, #ff793e 50%),
-                linear-gradient(135deg, #ff793e 50%, transparent 50%),
-                linear-gradient(to right, #ff793e, #ff793e);
-        background-position:
-                calc(100% - 10px) 10px,
-                calc(100% - 5px) 10px,
-                100% 0;
-        background-size: 5px 5px, 5px 5px, 0 0;
+        background-image: url(/assets/images/arrow_dropdown.png);
+        background-position: calc(100% - 5px) 8px;
         background-repeat: no-repeat;
         border: 2px solid #e5e5e5;
         border-radius: 4px;
         padding: 3px 20px 3px 3px;
         margin: 0 2.5px 0 2.5px;
+        background-size: 10px 5px;
     }
 
     select:active {
-        background-image:
-                linear-gradient(135deg, transparent 50%, #ff793e 50%),
-                linear-gradient(45deg, #ff793e 50%, transparent 50%),
-                linear-gradient(to right, #ff793e, #ff793e);
-        background-position:
-                calc(100% - 10px) 8px,
-                calc(100% - 5px) 8px,
-                100% 0;
-        background-size: 5px 5px, 5px 5px, 0 0;
+        background-image: url(/assets/images/arrow_dropdown_up.png);
+        background-position: calc(100% - 5px) 8px;
         background-repeat: no-repeat;
     }
 }
@@ -2650,102 +2627,80 @@ input[disabled] {
     .used-by {
         height: 150px;
     }
-
     .content h2.title {
         font-size: 21px;
     }
-
     .content .artist-title {
         font-size: 11px;
     }
-
     .content .customer-title {
         font-size: 11px;
     }
-
     .content .category-text {
         font-size: 9px;
         letter-spacing: 0;
     }
-
     .content .option-title {
         font-size: 9px;
     }
-
     .content .options-img {
         width: 90%;
     }
-
     .content .category-img {
         height: 113px;
     }
-
     .content .title-secure {
         margin-top: 15px;
         font-size: 11px;
         margin-bottom: 19px;
     }
-
     .flip-container, .front, .back {
         width: 113px;
         height: 150px;
     }
-
     .flip-container {
         margin-bottom: 38px;
     }
-
     .flip-container .front img, .flip-container .back img {
         height: 100%;
         width: 100%;
     }
-
     .cards {
         padding: 38px 0;
     }
-
     .back .show-more {
         font-size: 9px;
         bottom: 34px;
     }
-
     .spotlight .title {
         font-size: 14px;
         margin-bottom: 8px;
     }
-
     .spotlight .browse-artists {
         margin-top: 8px;
         width: 85%;
         font-size: 12px;
     }
-
     .panel-text.controls .btn {
         font-size: 14px!important;
     }
-
     .used-by .text-panel h2 {
         font-size: 11px;
         margin-top: 26px;
     }
-
     .used-by .text-panel .text {
         font-size: 11px;
         margin-bottom: 11px;
     }
-
     .used-by .text-panel .author {
         font-size: 12px;
     }
-
     .stay-in-touch h2 {
         font-size: 13px;
     }
-
     .stay-in-touch .text {
         font-size: 11px;
     }
-
     .stay-in-touch input {
         display: block;
         margin: 0 0 8px;
@@ -2759,155 +2714,120 @@ input[disabled] {
         -o-transform: translateX(-50%);
         transform: translateX(-50%);
     }
-
     .stay-in-touch .form .controls .button-gradient.filled {
         display: block;
         width: 100%;
     }
-
     .stay-in-touch .form .controls {
         width: 100%;
         max-width: 188px;
     }
-
     .stay-in-touch .follow-us {
         font-size: 12px;
     }
-
     .controls .button-gradient.filled .btn {
         height: 32px;
         width: 137px;
     }
-
     .panel-text .text {
         font-size: 11px;
     }
-
     .pagination {
         display: none;
     }
-
     .show-more-info {
         display: inline-block;
     }
-
     .profile-block .title span {
         margin-left: 8px;
         font-size: 14px;
     }
-
     .feedback-block {
         padding-left: 19px;
     }
-
     .feedback-block .text {
         border-bottom: none;
         font-size: 11px;
     }
-
     .feedback-block .text .more {
         display: none;
     }
-
     .feedback-block {
         border-bottom: 1px solid rgba(187, 187, 187, 0.10);
     }
-
     .info .price {
         font-size: 11px;
     }
-
     .profile-info {
         margin-top: -83px;
     }
-
     .profile-info .avatar {
         width: 98px;
         height: 98px;
     }
-
     .profile-info .info {
         padding-left: 0;
         width: calc(100% - 114px);
     }
-
     .info .username {
         font-size: 17px;
         margin-top: 30px;
     }
-
     .info .specializations ul {
         margin-top: 0;
     }
-
-
     .info .specializations ul > li > a {
         font-size: 10px;
     }
-
     .menu .container>ul>li:not(:last-of-type) {
         margin-right: 49px;
     }
-
     .price-list .holder {
         height: auto;
         margin-bottom: 8px;
     }
-
     .price-list .video {
         padding-bottom: 0;
     }
-
     .price-list .info {
         width: 100%;
         margin-left: 0;
         margin-top: 8px;
     }
-
     .price-list .item {
         padding: 0 11px;
     }
-
     .media ul>li>a {
         font-size: 9px;
     }
-
     .media {
         margin-top: 38px;
     }
-
     .media .badge {
         height: 14px;
         min-width: 14px;
         font-size: 7px;
         padding: 4px;
     }
-
     .media ul>li {
         margin: 0;
         margin-right: 8px;
     }
-
     .media ul {
         padding-left: 15px;
     }
-
     .media .circle {
         left: 15px;
     }
-
     .bx-pager {
         padding: 0 45px;
     }
-
     .price-list .heading{
         padding-right: 178px;
     }
-
     .price-list .heading h2 {
         font-size: 17px;
     }
-
     .price-list .controls {
         left: 50%;
         -webkit-transform: translateX(-50%);
@@ -2916,50 +2836,39 @@ input[disabled] {
         -o-transform: translateX(-50%);
         transform: translateX(-50%);
     }
-
     .price-list .heading .price {
         font-size: 11px;
     }
-
     main {
         margin-bottom: 0;
     }
-
     .price-list .video .name {
         bottom: -26px;
     }
-
     .price-list .video .name .name-text {
         margin-top: 3px;
         font-size: 10px;
     }
-
     .price-list .item .info p {
         font-size: 11px;
     }
-
     .price-list .controls .btn {
         font-size: 9px;
     }
-
     .biography p {
         font-size: 11px;
         padding: 11px;
     }
-
-
     .feedback-block .avatar img {
         width: 38px;
         height: 38px;
     }
-
     .feedback-block .avatar {
         font-size: 9px;
     }
     .media-content.video .holder{width: 82%;}
     .media-content.video .btn-prev{right: -8%;}
     .media-content.video .btn-next{left: -8%;}
-
     .price-list .edit-form .holder,
     .price-list .edit-form .holder.video{
         height: auto;
@@ -3005,12 +2914,10 @@ input[disabled] {
         left: auto;
         right: 10px;
     }
-
     .recovery-form .notify-list{
         font-size: 14px;
         line-height: 17px;
     }
-
     .recovery-form .ico{right: 7px;}
 }
 /*Screens with width < 679px*/
@@ -3076,7 +2983,7 @@ input[disabled] {
 
     .controls .button-gradient.filled .btn {
         height: 26px;
-        width: 100%;
+        /*width: 100%;*/
     }
 
     .panel-text .text {
@@ -3145,7 +3052,7 @@ input[disabled] {
     }
 
     .controls .button-gradient .btn {
-        font-size: 11px;
+        font-size: 14px;
     }
 
     .controls .button-gradient.filled .btn {
@@ -3202,7 +3109,6 @@ input[disabled] {
         padding: 0 11px 100px;
     }
 }
-
 @media (min-width: 992px) and (max-width: 1200px) {
     .price-list .video iframe {
         height: 255px;
@@ -3614,5 +3520,11 @@ only screen and (min-resolution: 2dppx) {
     }
     i.icon.icon-quotation-sent {
         background-image: url(/assets/images/success@2x.png);
+    }
+    select {
+        background-image: url(/assets/images/arrow_dropdown@2x.png);
+    }
+    select:active {
+        background-image: url(/assets/images/arrow_dropdown_up@2x.png);
     }
 }
